Stopped the h1 and paragraph from getting too long the paragraph but also the h1 title were both stretching out too much on larger screens so I set a max-inline-size of 85%

--- a/style.css
+++ b/style.css
@@ -216,6 +216,10 @@ solution: fixed it by changing the border-radius on the card (top left/right) fr
     flex-direction: column;
     justify-content: space-evenly;
   }
+  .card__title,
+  .card__info {
+    max-inline-size: 85%; /*stops h1 title and paragraph from getting too long */
+  }
 
   button {
     inline-size: 95%;
